--- a/Bejerholm Stenhuggeri/src/view/Login.form
+++ b/Bejerholm Stenhuggeri/src/view/Login.form
@@ -66,7 +66,7 @@
             <Property name="useNullLayout" type="boolean" value="false"/>
           </Layout>
           <SubComponents>
-            <Container class="javax.swing.JPanel" name="jPanel2">
+            <Container class="javax.swing.JPanel" name="jPanel_LoginRamme">
               <Properties>
                 <Property name="border" type="javax.swing.border.Border" editor="org.netbeans.modules.form.editors2.BorderEditor">
                   <Border info="org.netbeans.modules.form.compat2.border.EtchedBorderInfo">
@@ -85,7 +85,7 @@
                   <Group type="103" groupAlignment="0" attributes="0">
                       <Group type="102" alignment="0" attributes="0">
                           <EmptySpace min="-2" pref="173" max="-2" attributes="0"/>
-                          <Component id="jTextField2" min="-2" pref="218" max="-2" attributes="0"/>
+                          <Component id="jTextField_Kodeord" min="-2" pref="218" max="-2" attributes="0"/>
                           <EmptySpace pref="176" max="32767" attributes="0"/>
                       </Group>
                       <Group type="103" rootIndex="1" groupAlignment="0" attributes="0">
@@ -93,10 +93,10 @@
                               <EmptySpace min="0" pref="173" max="32767" attributes="0"/>
                               <Group type="103" groupAlignment="0" attributes="0">
                                   <Component id="jLabel3" min="-2" pref="220" max="-2" attributes="0"/>
-                                  <Component id="jLabel1" min="-2" max="-2" attributes="0"/>
-                                  <Component id="jTextField1" min="-2" pref="219" max="-2" attributes="0"/>
-                                  <Component id="jLabel2" min="-2" max="-2" attributes="0"/>
-                                  <Component id="jButton1" min="-2" pref="219" max="-2" attributes="0"/>
+                                  <Component id="jLabel_BrugerNavn" min="-2" max="-2" attributes="0"/>
+                                  <Component id="jTextField_Brugernavn" min="-2" pref="219" max="-2" attributes="0"/>
+                                  <Component id="jLabel_BrugerKode" min="-2" max="-2" attributes="0"/>
+                                  <Component id="jButton_Login" min="-2" pref="219" max="-2" attributes="0"/>
                               </Group>
                               <EmptySpace min="0" pref="174" max="32767" attributes="0"/>
                           </Group>
@@ -107,7 +107,7 @@
                   <Group type="103" groupAlignment="0" attributes="0">
                       <Group type="102" alignment="1" attributes="0">
                           <EmptySpace pref="161" max="32767" attributes="0"/>
-                          <Component id="jTextField2" min="-2" pref="44" max="-2" attributes="0"/>
+                          <Component id="jTextField_Kodeord" min="-2" pref="44" max="-2" attributes="0"/>
                           <EmptySpace min="-2" pref="121" max="-2" attributes="0"/>
                       </Group>
                       <Group type="103" rootIndex="1" groupAlignment="0" attributes="0">
@@ -115,13 +115,13 @@
                               <EmptySpace min="0" pref="36" max="32767" attributes="0"/>
                               <Component id="jLabel3" min="-2" max="-2" attributes="0"/>
                               <EmptySpace min="18" pref="18" max="-2" attributes="0"/>
-                              <Component id="jLabel1" min="-2" max="-2" attributes="0"/>
+                              <Component id="jLabel_BrugerNavn" min="-2" max="-2" attributes="0"/>
                               <EmptySpace min="11" pref="11" max="-2" attributes="0"/>
-                              <Component id="jTextField1" min="-2" pref="46" max="-2" attributes="0"/>
+                              <Component id="jTextField_Brugernavn" min="-2" pref="46" max="-2" attributes="0"/>
                               <EmptySpace min="11" pref="11" max="-2" attributes="0"/>
-                              <Component id="jLabel2" min="-2" max="-2" attributes="0"/>
+                              <Component id="jLabel_BrugerKode" min="-2" max="-2" attributes="0"/>
                               <EmptySpace min="-2" pref="76" max="-2" attributes="0"/>
-                              <Component id="jButton1" min="-2" pref="63" max="-2" attributes="0"/>
+                              <Component id="jButton_Login" min="-2" pref="63" max="-2" attributes="0"/>
                               <EmptySpace min="0" pref="37" max="32767" attributes="0"/>
                           </Group>
                       </Group>
@@ -129,34 +129,34 @@
                 </DimensionLayout>
               </Layout>
               <SubComponents>
-                <Component class="javax.swing.JButton" name="jButton1">
+                <Component class="javax.swing.JButton" name="jButton_Login">
                   <Properties>
                     <Property name="text" type="java.lang.String" value="Login"/>
                   </Properties>
                   <Events>
-                    <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jButton1ActionPerformed"/>
+                    <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jButton_LoginActionPerformed"/>
                   </Events>
                 </Component>
-                <Component class="javax.swing.JTextField" name="jTextField1">
+                <Component class="javax.swing.JTextField" name="jTextField_Brugernavn">
                   <Properties>
                     <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
                       <Font name="Tahoma" size="14" style="0"/>
                     </Property>
                   </Properties>
                 </Component>
-                <Component class="javax.swing.JLabel" name="jLabel1">
+                <Component class="javax.swing.JLabel" name="jLabel_BrugerNavn">
                   <Properties>
                     <Property name="text" type="java.lang.String" value="Brugernavn"/>
                   </Properties>
                 </Component>
-                <Component class="javax.swing.JLabel" name="jLabel2">
+                <Component class="javax.swing.JLabel" name="jLabel_BrugerKode">
                   <Properties>
                     <Property name="text" type="java.lang.String" value="Kodeord"/>
                   </Properties>
                 </Component>
                 <Component class="javax.swing.JLabel" name="jLabel3">
                 </Component>
-                <Component class="javax.swing.JPasswordField" name="jTextField2">
+                <Component class="javax.swing.JPasswordField" name="jTextField_Kodeord">
                   <Properties>
                     <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
                       <Font name="Tahoma" size="14" style="0"/>
@@ -165,7 +165,7 @@
                 </Component>
               </SubComponents>
             </Container>
-            <Component class="javax.swing.JLabel" name="jLabel10">
+            <Component class="javax.swing.JLabel" name="jLabel_LoginOverskrift">
               <Properties>
                 <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
                   <Font name="Tahoma" size="18" style="0"/>
